kubernetes/application/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: application-namespace
  annotations: 
    cert-manager.io/cluster-issuer: issuer
spec:
  tls:
  - hosts:
      - api.ecommerce.example.invalid
    secretName: api-gateway-tls
  rules:
  - host: "api.ecommerce.example.invalid"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api-gateway-service
            port:
              number: 80
  ingressClassName: traefik
